--- a/MicroserviceDemo/docker-compose.override.yml
+++ b/MicroserviceDemo/docker-compose.override.yml
@@ -10,12 +10,16 @@ services:
       - AuthServer__Authority=http://auth-server:51511
       - ConnectionStrings__Default=Server=sqlserver;Database=MsDemo_Identity;Trusted_Connection=True;MultipleActiveResultSets=true;User=sa;Password=yourStrong(!)Password;Integrated Security=false
       - Redis__Configuration=redis
+      - ReRoutes__0__DownstreamScheme=http
       - ReRoutes__0__DownstreamHostAndPorts__0__Host=identity-service
       - ReRoutes__0__DownstreamHostAndPorts__0__Port=80
+      - ReRoutes__1__DownstreamScheme=http
       - ReRoutes__1__DownstreamHostAndPorts__0__Host=product-service
       - ReRoutes__1__DownstreamHostAndPorts__0__Port=80
+      - ReRoutes__2__DownstreamScheme=http
       - ReRoutes__2__DownstreamHostAndPorts__0__Host=blogging-service
       - ReRoutes__2__DownstreamHostAndPorts__0__Port=80
+      - ReRoutes__3__DownstreamScheme=http
       - ReRoutes__3__DownstreamHostAndPorts__0__Host=tenant-management-service
       - ReRoutes__3__DownstreamHostAndPorts__0__Port=80
       - GlobalConfiguration__BaseUrl=http://internal-gateway
@@ -31,8 +35,10 @@ services:
       - AuthServer__Authority=http://auth-server:51511
       - ConnectionStrings__Default=Server=sqlserver;Database=MsDemo_Identity;Trusted_Connection=True;MultipleActiveResultSets=true;User=sa;Password=yourStrong(!)Password;Integrated Security=false
       - Redis__Configuration=redis
+      - ReRoutes__0__DownstreamScheme=http
       - ReRoutes__0__DownstreamHostAndPorts__0__Host=identity-service
       - ReRoutes__0__DownstreamHostAndPorts__0__Port=80
+      - ReRoutes__1__DownstreamScheme=http
       - ReRoutes__1__DownstreamHostAndPorts__0__Host=product-service
       - ReRoutes__1__DownstreamHostAndPorts__0__Port=80
       - GlobalConfiguration__BaseUrl=http://backend-admin-app-gateway
@@ -47,8 +53,10 @@ services:
       - AuthServer__Authority=http://auth-server:51511
       - ConnectionStrings__Default=Server=sqlserver;Database=MsDemo_Identity;Trusted_Connection=True;MultipleActiveResultSets=true;User=sa;Password=yourStrong(!)Password;Integrated Security=false
       - Redis__Configuration=redis
+      - ReRoutes__0__DownstreamScheme=http
       - ReRoutes__0__DownstreamHostAndPorts__0__Host=product-service
       - ReRoutes__0__DownstreamHostAndPorts__0__Port=80
+      - ReRoutes__1__DownstreamScheme=http
       - ReRoutes__1__DownstreamHostAndPorts__0__Host=blogging-service
       - ReRoutes__1__DownstreamHostAndPorts__0__Port=80
       - GlobalConfiguration__BaseUrl=http://public-website-gateway
