--- a/BookStore-Modular/application/src/Acme.BookStore.DbMigrator/appsettings.json
+++ b/BookStore-Modular/application/src/Acme.BookStore.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=localhost\\SQLDEV;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "IdentityServer": {
     "Clients": {
