--- a/BookStore-Modular/application/src/Acme.BookStore.Web/appsettings.json
+++ b/BookStore-Modular/application/src/Acme.BookStore.Web/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44367"
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=localhost\\SQLDEV;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AuthServer": {
     "Authority": "https://localhost:44367"
