--- a/MicroserviceDemo/applications/BackendAdminApp.Host/BackendAdminApp.Host.csproj
+++ b/MicroserviceDemo/applications/BackendAdminApp.Host/BackendAdminApp.Host.csproj
@@ -36,7 +36,9 @@
         <PackageReference Include="Volo.Blogging.Application.Contracts" Version="3.0.2" />
 
         <ProjectReference Include="..\..\modules\product\src\ProductManagement.HttpApi.Client\ProductManagement.HttpApi.Client.csproj" />
+        <ProjectReference Include="..\..\modules\resourcemanagement\src\Isnet.ResourceManagement.HttpApi.Client\Isnet.ResourceManagement.HttpApi.Client.csproj" />
         <ProjectReference Include="..\..\modules\product\src\ProductManagement.Web\ProductManagement.Web.csproj" />
+        <ProjectReference Include="..\..\modules\resourcemanagement\src\Isnet.ResourceManagement.Web\Isnet.ResourceManagement.Web.csproj" />
         <ProjectReference Include="..\..\shared\MsDemo.Shared\MsDemo.Shared.csproj" />
     </ItemGroup>
 
